[package]
name = "trails"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "43.0.0"
arrow-flight = "43.0.0"
arrow-ipc = "43.0.0"
byteorder = "1.4.3"
bytes = "1.4.0"
chrono = "0.4.26"
clap = { version = "4.3.16", features = ["derive"] }
datafusion = "28.0.0"
futures = "0.3.28"
rand = "0.8.5"
reedline = "0.21.0"
tokio = "1.28.2"
tokio-stream = { version = "0.1.14", features = ["net"] }
tonic = "0.9.2"
uuid = { version = "1.3.4", features = ["fast-rng", "v7"] }
